--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,18 @@ android {
         }
     }
 }
-
+ext {
+    supportLibraryVersion = "26.0.1"
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
-    implementation 'com.android.support:design:26.0.0'
+    implementation "com.android.support:design:$supportLibraryVersion"
+
+    implementation "com.android.support:cardview-v7:$supportLibraryVersion"
 }
