Included a circular positioning example and updated to Beta3

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,8 @@
         <activity android:name=".MovieActivity">
 
         </activity>
-        <activity android:name=".CupcakeActivity">
-
-        </activity>
+        <activity android:name=".CupcakeActivity" />
+        <activity android:name=".CircularConstraintActivity" />
     </application>
 
 </manifest>
