--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="za.co.riggaroo.constraintlayoutdemo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +22,7 @@
         </activity>
         <activity android:name=".CupcakeActivity" />
         <activity android:name=".CircularConstraintActivity" />
+        <activity android:name=".ImageFilterViewActivity"/>
     </application>
 
 </manifest>
