--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ImageFilterViewActivity"/>
         <activity android:name=".ConstraintLayoutStatesExampleActivity"/>
         <activity android:name=".BottomNavAnimationActivity"/>
+        <activity android:name=".FlowActivity"/>
         <activity android:name=".RecyclerViewSwipeMotionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
